fix collapse nest style

--- a/packages/theme-default/src/collapse.css
+++ b/packages/theme-default/src/collapse.css
@@ -40,8 +40,10 @@
     }
 
     @when active {
-      .el-collapse-item__header__arrow {
-        transform: rotate(90deg);
+      > .el-collapse-item__header {
+        .el-collapse-item__header__arrow {
+          transform: rotate(90deg);
+        }
       }
     }
 
